2007-07-09  Johnny Jacob  <jjohnny@novell.com>	
	
	* e-msg-composer.h : Added prototypes for
	e_msg_composer_get_raw_message_text and
	e_msg_composer_get_attachment_bar
	
2007-07-08  Johnny Jacob  <jjohnny@novell.com>

	* e-msg-composer.c : (e_msg_composer_get_raw_message_text ) Added.
	(e_msg_composer_get_attachment_bar) : Added. Returns the reference
	to the attachment bar.
	
2007-06-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #444107

	* e-msg-composer.c: (drop_action), (drop_popup_copy),
	(drop_popup_move), (drag_data_received):

2007-06-13  Bastien Nocera  <hadess@hadess.net>

	* e-msg-composer.c: (composer_key_pressed): Use the
	proper object to send the signal on (Closes: #442631)

2007-06-13  Sankar P  <psankar@novell.com>

	* e-msg-composer.c: (composer_key_pressed):
	Fixes build break. Includes a missing header.
	Fixes an invalid variable name.
	See #442631

2007-06-12  Bastien Nocera  <hadess@hadess.net>

	* e-msg-composer.c: (composer_key_pressed):
	Add support for the XF86Send multimedia key
	(Closes: #442631)

2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #386503 from Matthew Barnes
	
	* e-msg-composer.c: (e_msg_composer_show_help):

2007-06-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #315012 from Pascal Terjan

	* e-msg-composer.c: (handle_multipart_signed),
	(handle_multipart_encrypted), (handle_multipart_alternative),
	(handle_multipart), (e_msg_composer_new_with_message): Pass mime part
	instead of multipart to camel_cipher_decryp

2007-04-19  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #429422

	* e-msg-composer-hdrs.c (init), (e_msg_composer_hdrs_new):
	Use g_object_ref_sink() instead of gtk_object_sink().

2007-04-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #356523 from Martin Olsson

	* e-msg-composer.c: (e_msg_composer_add_inline_image_from_file): Copies 
	the file uri and decodes it before trying to attach the image.
