@@ -33,7 +33,6 @@ typedef struct _EMsgComposerClass  EMsgComposerClass;
 
 #include "e-msg-composer-hdrs.h"
 #include "Editor.h"
-#include "widgets/misc/e-attachment-bar.h"
 
 #ifdef __cplusplus
 extern "C" {
@@ -49,7 +48,7 @@ extern "C" {
 
 
 
-
+struct _EAttachmentBar;
 
 GtkType                  e_msg_composer_get_type                         (void);
 
@@ -195,7 +194,7 @@ void			 e_msg_composer_set_send_options		 (EMsgComposer *composer,
 									  gboolean      send_enable);
 const gchar *            e_msg_composer_get_raw_message_text              (EMsgComposer *composer);
 
-EAttachmentBar*          e_msg_composer_get_attachment_bar                (EMsgComposer *composer);
+struct _EAttachmentBar*          e_msg_composer_get_attachment_bar                (EMsgComposer *composer);
 
 #ifdef __cplusplus
 }
