@@ -1,3 +1,8 @@
+2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>
+
+
+	* e-msg-composer.h: Fix for build break
+
 2007-07-09  Johnny Jacob  <jjohnny@novell.com>	
 	
 	* e-msg-composer.h : Added prototypes for
